# py_clean_arch

./: README.md  main.py  pyproject.toml
fastapi_clean_arch/application/protocols/: controller_protocol.py
fastapi_clean_arch/infra/controllers/: health_check_controller.py
fastapi_clean_arch/infra/http/: fastapi_http_server.py  flask_http_server.py
fastapi_clean_arch/infra/http/django_http_server/: django_http_server_adapter.py  manage.py
fastapi_clean_arch/infra/http/django_http_server/django_http_server/: settings.py  urls.py
py_clean_arch/application/: health_check.py
py_clean_arch/application/protocols/: controller_protocol.py
py_clean_arch/infra/controllers/: health_check_controller.py
py_clean_arch/infra/http/: fastapi_http_server.py  flask_http_server.py
py_clean_arch/infra/http/django_http_server/: __init__.py  django_http_server_adapter.py
py_clean_arch/infra/http/django_http_server/django_http_server/: asgi.py  urls.py  wsgi.py
py_clean_arch/infra/http/helpers/: http_request.py  http_response.py
