[tool.poetry]
name = "fastapi-clean-arch"
version = "0.1.0"
description = ""
authors = ["Erick Duarte <erickod@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_clean_arch"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
pymongo = "^4.3.3"
uvicorn = "^0.21.1"
django = "^4.1.7"
flask = {extras = ["async"], version = "^2.2.3"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
ruff = "^0.0.257"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
